1999-01-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.[ch]: removed. contents moved to the following files:
	* preferences.c: put all the prefs stuff here.
	* findreplace.c: find/replace and goto code.
	* converter.c: conversion dialog code.
	* main.c: put MDI signal handlers here.
	* ui.c: only global menus and ui utility functions
	remain here.
	* gnome-support.c: becomes session.c.
	* gnome-support.h: removed. contents moved to ghex.h.
	
1999-01-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ghex.h, config.c (guint max_undo_depth): global max undo depth
	for edited files.
	* ui.c (open_prefs_dialog): added max_undo_depth setting to
	preferences dialog.
	* callbacks.[ch] (max_undo_changed_cb): called when the prefs
	settings changes.
	(apply_changes_cb): apply changes to max_undo_depth. also don't
	reset mdi_mode if it hasn't changed.
	* hex-document.[ch] (hex_document_set_max_undo): new public
	function for setting the undo_max member.
	(hex_document_init): set undo_max member to max_undo_depth.
	* config.c (load_configuration, save_configuration): save
	max_undo_depth setting.

1999-01-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: removed view_menu from global menus.
	* hex-document.c: added view_menu to child menus.
	* callbacks.[ch] (add_view_cb, remove_view_cb): moved to
	hex-document.c.
	* help/C/index.html: describe undo/redo.
	
1999-01-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (is_printable): fix a casting problem.
	* hex-document.c: removed GNOME_ENABLE_DEBUG.
	
1999-01-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_key_press): return FALSE if we don't handle
	the key press event. this is the Right Behaviour, I guess.
	* hex-document.h: new member undo_top pointing to the stack
	top (contains data for the next UNDO and its predecessor (if
	it exists) contains data for the next REDO.
	* hex-document.c: implemented redo capabilities. actions that