@@ -1,3 +1,10 @@
+1999-01-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* main.c: Do not crash if we dont find the translation.
+
+	* ghex.h (GROUP_MENU_PATH): Sync the string to the actual item we
+	have on the menu. 
+
 1999-01-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* callbacks.[ch]: removed. contents moved to the following files:
